user email and date now in displayed posts, rspec problems

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
+
 <% @posts.each do |post| %>
+<div class="post">
+  <h2><%= post.username %> : <%= post.created_at %></h2>
   <p><%= post.message %></p>
+</div>
 <% end %>
 
 <%= link_to new_post_path do %>
