--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 
 <% @posts.each do |post| %>
 <div class="post">
-  <h3><%= post.username %> : <%= post.created_at %></h3>
+  <h3><%= User.find(post.user_id).username %> : <%= post.created_at %></h3>
   <p><%= post.message %></p>
 </div>
 <% end %>
