--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,8 +11,9 @@
   </div>
   <div class="post_body">
   <p><%= post.message %></p>
+  </div>
   <div class="post_actions">
-  <%= link_to '<button type="button">Like</button>'.html_safe, '/posts/like' %>
+  <%= link_to '<button type="button">Like</button>'.html_safe, '/like' %>
   </div>
 </div>
 <% end %>
