--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,20 @@
 
 <% @posts.each do |post| %>
 <div class="post">
-  <h3><%= post.username %> : <%= post.created_at %></h3>
+  <div class="post_head">
+  <img src="<%=User.find(post.user_id).image_url%>" width="8%">
+  <h3><%=  User.find(post.user_id).username%> :
+      <%= post.created_at %>
+
+      <%= post.post_likes %>
+  </h3>
+  </div>
+  <div class="post_body">
   <p><%= post.message %></p>
+  </div>
+  <div class="post_actions">
+  <%= button_to 'Like', posts_path, method: :post %>
+  </div>
 </div>
 <% end %>
 
