--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,10 @@
-
+<p><%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
+<%= link_to new_post_path do %>
+  New post
+<% end %>
 <% @posts.each do |post| %>
 <div class="post">
-<<<<<<< HEAD
-  <h3><%= User.find(post.user_id).username %> : <%= post.created_at %></h3>
-=======
+
   <div class="post_head">
   <img src="<%=User.find(post.user_id).image_url%>" width="8%">
   <h3><%=  User.find(post.user_id).username%> :
@@ -13,15 +14,11 @@
   </h3>
   </div>
   <div class="post_body">
->>>>>>> 38726ffb5d3125dee6ce7ef13ec9956a74864b00
+
   <p><%= post.message %></p>
   </div>
   <div class="post_actions">
   <%= button_to 'Like', posts_path, method: :post %>
   </div>
 </div>
-<% end %>
-
-<%= link_to new_post_path do %>
-  New post
 <% end %>
