--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
+<p><%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %></p>
 <%= form_for @post do |form| %>
   <%= form.label :message %>
   <%= form.text_field :message %>
