--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,21 @@
-&emsp;
 <% if user_signed_in? %>
-<%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %>
+<p>Hello <%= current_user.username %></p>
+<%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %>
 &emsp;
-<%= link_to('Edit registration ', edit_user_registration_path)%>
-&emsp;
-<%= link_to('Logout ', destroy_user_session_path, method: :delete)%>
+<%= link_to('Edit Registration ', edit_user_registration_path)%>
 &emsp;
 <%= link_to new_post_path do %>
   New post
 <% end %>
 &emsp;
+<%= link_to posts_path do %>
+  View Posts
+<% end %>
+&emsp;
 <%= link_to('Profile', '/profile') %>
 <% else %>
 <%= link_to '/users/sign_in' do %>
-  Sign in
+  Sign In To Your Account
 <% end %>
 &emsp;
 <% end %>
