--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
+<p><%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %></p>
 <%= link_to new_post_path do %>
   New post
 <% end %>
