profile page implemented

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,13 +13,14 @@
 
 <%# @user = route_to '/user?params[:post]=post' => @user = query  %>
 <div class="invisible">
-<%= @user = User.find(post.user_id) %>
+<%= @user = getUser(post) %>
 </div>
   <div class="post_head">
   <img src="<%=@user.image_url%>" width="8%">
-  <h3><%=  @user.username%> :
+  <h3><%= link_to("/profile?user=#{@user.id}") do%>  <%=@user.username%> <% end %> :
       <%= post.created_at %>
       <%= post.post_likes %>
+  </h3>
   <div class="post_body">
     <p><%= post.message %></p>
   </div>
