--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,16 +11,14 @@
 <% @posts.reverse_each do |post| %>
 <div class="post">
 
-<%# @user = route_to '/user?params[:post]=post' => @user = query  %>
-<div class="invisible">
-<%= @user = getUser(post) %>
-</div>
   <div class="post_head">
-  <img src="<%=@user.image_url%>" width="8%">
-  <h3><%= link_to("/profile?user=#{@user.id}") do%>  <%=@user.username%> <% end %> :
-      <%= post.created_at %>
-      <%= post.post_likes %>
-  </h3>
+    <img src="<%=getUser(post).image_url%>" width="8%">
+    <h3><%= link_to("/profile?user=#{getUser(post).id}") do%>  <%=getUser(post).username%> <% end %> :
+        <%= post.created_at %>
+        <%= post.post_likes %>
+    </h3>
+  </div>
+  
   <div class="post_body">
     <p><%= post.message %></p>
   </div>
@@ -29,5 +27,5 @@
     <%= button_to 'Like', posts_path, method: :post %>
   </div>
 
-  </div>
+</div>
 <% end %>
