--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_pack_tag 'application' %>
+<%# <%= react_component("componenet name", {"propName": "propvalue"})%> %>
+
 <% if user_signed_in? %>
 <p>Hello <%= current_user.username %></p>
 <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %>
