--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -41,10 +41,10 @@
   <%= form_for ([post, post.comments.build]) do |f| %>
     <p>
       <%= f.label :body %><br>
-      <%= f.text_area(:body, {:class => 'form-control'}) %>
+      <%= f.text_area(:body, {id: 'comment'+post.id.to_s, :class => 'form-control'}) %>
     </p>
     <p>
-      <%= f.submit %>
+      <%= f.submit ({id: 'submitComment'+post.id.to_s, :class => 'form-control'})%>
     </p>
   <% end %>
 
