--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,7 @@
   <h3> Comments </h3>
 
   <% post.comments.each do |comment| %>
-    <div class="well">
+    <div class="comments">
       <p><%=comment.username %> : <%=comment.body %></p>
     </div>
   <% end %>
