--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,3 +1,3 @@
-<%= @user.username %>
-<img src="<%= @user.image_url %>">
-<%= @user.bio_desc %>
+
+<%= javascript_pack_tag 'application' %>
+<%= react_component("TestComponent", { hello: @user }) %>
