--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <p><%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %></p>
-<%= form_for : post, url: post_path(@post), method: :patch do |form| %>
+<%= form_for @post do |form| %>
   <%= form.label :message %>
   <%= form.text_field :message %>
 
