adding deleting post spec

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,9 +24,9 @@
 
   <%= button_to "Edit", edit_post_path(post), id: 'edit'+post.id.to_s %>
 
-  <%= button_to "Delete", post_path(post),
+  <%= button_to "Delete", post_path(post), id:'delete'+post.id.to_s, 
                           method: :delete,
-                          data: {confirm: "Are you sure?"} %>
+                          data: {confirm: "Are you sure?"} %> 
   <hr>
   <p><strong> Liked <%= post.post_likes %> times </strong></p>
 
