Implemented comments, likes (needs more work) and new posts in react

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_pack_tag 'application' %>
+<%= csrf_meta_tag %>
+
 <p><%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %></p>
 
 <p><%= link_to new_post_path do %>
@@ -9,7 +12,11 @@
 <% end %>
 
 <% @posts.order(:created_at).reverse_each do |post| %>
-<div class="post">
+
+<%= react_component('PostPage', {post: post, currentUser: @user, postUser: getUser(post), postComments: post.comments}) %>
+
+<!-- <div class="post">
+
 
   <div class="post_head">
     <img src="<%=getUser(post).image_url%>" width="8%">
@@ -48,5 +55,5 @@
     </p>
   <% end %>
 
-</div>
+</div> -->
 <% end %>
