--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,10 +10,9 @@
 <%= link_to '/' do %>
   Home
 <% end %>
-
+<%= react_component('PostPage', {post: @posts[0], currentUser: @user, postUser: @user, postComments: @posts[0].comments, postList: @posts}) %>
 <% @posts.order(:created_at).reverse_each do |post| %>
-<%= react_component%>
-<%= react_component('PostPage', {post: post, currentUser: @user, postUser: getUser(post), postComments: post.comments, postList: @posts}) %>
+
 
 <!-- <div class="post">
 
