--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,46 @@
-<p><%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %></p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<p><%= link_to new_post_path do %>
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+
+<div class = "navbar navbar-default"> <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %>
+
+<%= link_to new_post_path do %>
   New post
-<% end %></p>
+<% end %>
 
 <%= link_to '/' do %>
   Home
 <% end %>
+</div>
 
-<div class = "posts_container">
+
+
+<div class = "posts_container" >
 <% @posts.order(:created_at).reverse_each do |post| %>
 <div class="post">
 
@@ -61,4 +93,3 @@
 
 </div>
 <% end %>
-</div>
