--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,22 @@
+<% if user_signed_in? %>
+  <h2>Welcome <%= current_user.username %></h2>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">vBook</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+</nav>
+
+<% end %>
+</div>
+
 <%= javascript_pack_tag 'application' %>
 
 <p><%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %></p>
 <%= react_component('NewPost')%>
+
+<hr/>
+
 <% @posts.order(:created_at).reverse_each do |post| %>
 <%= react_component('PostPage', {post: post, currentUser: @user, postUser: getUser(post), postComments: post.comments}) %>
 
