--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,6 +1,23 @@
+<% if user_signed_in? %>
+  <h2>Welcome <%= current_user.username %></h2>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">vBook</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+</nav>
+
+<% end %>
+</div>
+
+<%= link_to posts_path do %>
+  Back to newsfeed
+<% end %>
+&emsp;
+
 <div style="border:1px solid black;">
 <h1><p><%= @user.username %>'s Profile</p></h1>
-<p><img src="<%= @user.image_url %>" width=8%></p>
+<p><img src="<%= @user.image_url %>" height: "200px"></p>
 <h2> About </h2>
 <p><%= @user.bio_desc %></p>
 </div>
