Date and time of posts added on profiles

--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -28,7 +28,7 @@
 
 <% @all_posts.each do |user_post| %>
 
-<p> <i><%= user_post.message %></i> at <%= user_post.created_at %> </p>
+<p> <i><%= user_post.message %></i> at <%= user_post.created_at.strftime("%B %d %Y @ %H:%M") %> </p>
 
 <% end %>
 
