--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -17,7 +17,7 @@
 
 <div>
 <h1><strong><p><%= @user.username %>'s Profile</p></strong></h1>
-<p><img src="<%= @user.image_url %>" height: "200px"></p>
+<p><img src="<%= @user.image_url %>" height: "30%"></p>
 <h3> About: </h3>
 <p><%= @user.bio_desc %></p>
 </div>
