--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,11 @@
+<style>
+body {
+    background-image: url("https://calligraphyletters.org/letter-downloads/ruthie/calligraphy-letter-v.jpg");
+    background-repeat: no-repeat;
+    background-size: 110%;
+}
+</style>
+
 <% if user_signed_in? %>
   <h2>Welcome <%= current_user.username %></h2>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
